tests/src/frontend/syntax/invalid/bad_negative_literal_pattern.sk
fun main(): String {
  0 match {
  | - false -> "Fail"
  }
}
